fix: dark mode toggle placement

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,5 @@
 .Header {
-    max-width: 1080px;
+    max-width: 1600px;
     width: calc(100vw - 32px);
     padding: 16px;
     position: absolute;
@@ -10,5 +10,5 @@
 }
 
 .Header-darkModeToggle {
-    justify-self: end;
+    justify-self: flex-end;
 }
